--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
